--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ body {
   border-bottom: 4px solid var(--blue);
   border-radius: 2px;
   left: 0;
-  bottom: -31px;
+  bottom: -1px;
 }
 
 .container {
@@ -116,13 +116,16 @@ body {
 }
 /* logo */
 .logo-link {
-  padding: 24px 0;
   font-family: 'Raleway';
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
   color: var(--blue);
   margin-right: 93px;
+}
+
+.logo-link-header {
+  padding: 24px 0;
 }
 
 .logo-dark {
@@ -199,7 +202,7 @@ body {
   line-height: 1.14;
   color: var(--text-color-gray);
   fill: var(--text-color-gray);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* hero section */
@@ -556,7 +559,8 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -631,7 +635,8 @@ body {
   border-radius: 4px;
   border: transparent;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
@@ -660,6 +665,8 @@ body {
   flex-basis: calc(100% / 3 - 30px);
   margin-top: 30px;
   margin-left: 30px;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-item:hover,
